<resources>
    <string name="app_name">DailyWtf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Daily WTF</string>
    <string name="nav_header_subtitle">Curious Perversions in Information Technology</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sidebar_featured_articles">Featured Articles</string>
    <string name="sidebar_codesod">CODESOD</string>
    <string name="sidebar_errord">Error\'d</string>
    <string name="sidebar_other_articles">Other Articles</string>
    <string name="sidebar_recent_articles">Recent Articles</string>

    <!--SLUGS-->
    <string name="slug_feature_articles">feature-articles</string>
    <string name="slug_code_sod">code-sod</string>
    <string name="slug_errord">errord</string>
    <string name="all_series_title">All Series</string>
    <string name="about_title">WTF is the Daily WTF</string>
    <string name="about_description">Founded in 2004 by Alex Papadimoulis, The Daily WTF is your how-not-to guide for developing software. We recount tales of disastrous development, from project management gone spectacularly bad to inexplicable coding choices. Remy Porter is the editor-in-chief and needs to read your story or see your bad code.</string>
    <string name="about_submit">Submit your WTF</string>
    <string name="about_submit_url">http://thedailywtf.com/submit-wtf</string>
    <string name="error_no_series">Could not obtain series</string>
</resources>
