<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/recent_articles"
            android:title="@string/sidebar_recent_articles" />
        <item
            android:id="@+id/featured_articles"
            android:title="@string/sidebar_featured_articles" />
        <item
            android:id="@+id/code_sod"
            android:title="@string/sidebar_codesod" />
        <item
            android:id="@+id/errord"
            android:title="@string/sidebar_errord" />
        <item
            android:id="@+id/other_articles"
            android:title="@string/sidebar_other_articles" />
    </group>

</menu>
